--- a/templates/customers/addresses.liquid
+++ b/templates/customers/addresses.liquid
@@ -180,9 +180,9 @@
         <!-- current addresses -->
         {%- unless customer.addresses_count == 0 -%}
           {%- for address in customer.addresses -%}
-          <div id="EditAddress_{{ address.id }}" class="address-form fadeInUp section-border hr--sm" {% unless address == customer.default_address %}style="display:none;"{% endunless %}>
+          <div id="EditAddress_{{ address.id }}" class="address-form fadeInUp section-border" {% unless address == customer.default_address %}style="display:none;"{% endunless %}>
             {%- form 'customer_address', address, class: 'form-vertical' -%}
-              <h2>{{ 'customer.addresses.edit_address' | t }}</h2>
+              <h2 class="hr--lg">{{ 'customer.addresses.edit_address' | t }}</h2>
 
               {%- if form.errors -%}
               {{ form.errors | default_errors }}
