--- a/templates/customers/account.liquid
+++ b/templates/customers/account.liquid
@@ -14,7 +14,7 @@
           <h1 class="page-title" style="margin-bottom: 0;">{{ customer.name }}</h1>
         </div>
 
-        <p class="text-secondary" tyle="text-align: center;">
+        <p class="text-center">
           {{ customer.email }}
         </p>
         <!-- ENDCUSTOM -->
