--- a/templates/customers/reset_password.liquid
+++ b/templates/customers/reset_password.liquid
@@ -3,7 +3,7 @@
   <div class="wrapper">
 
     <div class="grid">
-      <div class="grid__item large--four-twelfths push--large--four-twelfths">
+      <div class="grid__item large--six-twelfths push--large--three-twelfths">
 
         <div class="section-header">
           <div class="page-title-wrapper">
