Changed wording to register switching

--- a/templates/customers/login.liquid
+++ b/templates/customers/login.liquid
@@ -69,7 +69,7 @@
           <div class="text-center spacer-auto">
             <div>
               <!-- CUSTOM -->
-              <span>Not a Member?</span>
+              <span>Don't have an account?</span>
               <!-- ENDCUSTOM -->
               <a href="{{ routes.account_register_url }}" style="text-decoration: underline;">
                 {%- comment -%} CUSTOM: Disabled account creation icon.
