Newsletter popup test.

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -275,7 +275,9 @@
     {%- render "dbtfy-cookie-box" -%}
     {%- render "dbtfy-sales-pop" -%}
     {%- render "dbtfy-facebook-messenger" -%}
+    {%- comment -%}
     {%- render "dbtfy-newsletter-popup" -%}
+    {%- endcomment -%}
     {%- render "dbtfy-quick-view", type: "container" -%}
     {%- section "dbtfy-upsell-popup" -%}
     {%- section "dbtfy-quantity-breaks" -%}
