Added custom gallery section back to the cookware product description page.

--- a/templates/product.cookware.liquid
+++ b/templates/product.cookware.liquid
@@ -8,6 +8,8 @@
 
 {%- section 'featured-content_cookware' -%}
 
+{%- section 'custom-gallery_cookware'}
+
 {%- section 'product-recommendations' -%}
 
 <div style="position: relative;">
