Fixed invalid syntax including section.

--- a/templates/product.cookware.liquid
+++ b/templates/product.cookware.liquid
@@ -8,7 +8,7 @@
 
 {%- section 'featured-content_cookware' -%}
 
-{%- section 'custom-gallery_cookware'}
+{%- section 'custom-gallery_cookware' -%}
 
 {%- section 'product-recommendations' -%}
 
