--- a/sections/custom-gallery_desert-fox-tent.liquid
+++ b/sections/custom-gallery_desert-fox-tent.liquid
@@ -46,6 +46,10 @@
 #shopify-section-custom-gallery_desert-fox-tent .gallery-image-one {
   padding-top: 225%;
 }
+#shopify-section-custom-gallery_desert-fox-tent .gallery-image-one img {
+  position: absolute;
+  left: -30%;
+}
 #shopify-section-custom-gallery_desert-fox-tent .gallery-image-two {
   padding-top: 75%;
 }
