Reset photo gallery 1 position for the mobile mode.

--- a/sections/custom-gallery_desert-fox-tent.liquid
+++ b/sections/custom-gallery_desert-fox-tent.liquid
@@ -75,6 +75,10 @@
   #shopify-section-custom-gallery_desert-fox-tent .gallery-image-one {
     padding-top: 150%;
   }
+  #shopify-section-custom-gallery_desert-fox-tent .gallery-image-one img {
+    position: absolute;
+    left: 0;
+  }
   #shopify-section-custom-gallery_desert-fox-tent .gallery-image-two {
     padding-top: 150%;
   }
